--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
+    
+    <style> @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap'); </style>
+
     <title>React App</title>
   </head>
   <body>
