--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -29,6 +29,13 @@
     
     <style> @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap'); </style>
 
+    <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous"
+    />
+
     <title>React App</title>
   </head>
   <body>
